add views and logic for baby, entry, and new baby.

--- a/app/views/secrets.ejs
+++ b/app/views/secrets.ejs
@@ -3,12 +3,14 @@
 <div class="jumbotron text-center">
   <div class="container">
     <i class="fas fa-key fa-6x"></i>
-    <h1 class="display-3">You've Discovered My Secret!</h1>
-    <p class="secret-text">Jack Bauer is my hero.</p>
-    <hr>
+    <h1 class="display-3">Your babies!</h1>
+    <%  foundBabies.forEach((baby) => { %>
+        <p class="secret-text" ><a href="/<%=baby.name%>"><%=baby.name%></a></p>
+    <% }) %>
     
-    <a class="btn btn-light btn-lg" href="/logout" role="button">Log Out</a>
-    <a class="btn btn-dark btn-lg" href="/submit" role="button">Submit a Secret</a>
+    <hr>
+      <a class="btn btn-light btn-lg" href="/logout" role="button">Log Out</a>
+      <a class="btn btn-dark btn-lg" href="/newbaby" role="button">Add a New Baby</a>
   </div>
 </div>
 
