--- a/app/views/newbaby.ejs
+++ b/app/views/newbaby.ejs
@@ -3,13 +3,13 @@
 <div class="container">
   <div class="jumbotron centered">
     <i class="fas fa-key fa-6x"></i>
-    <h1 class="display-3">Secrets</h1>
-    <p class="secret-text">Don't keep your secrets, share them anonymously!</p>
+    <h1 class="display-3">Babies</h1>
+    <p class="secret-text">Everyody loves babies!</p>
 
-    <form action="/submit" method="POST">
+    <form action="/newbaby" method="POST">
 
       <div class="form-group">
-        <input type="text" class="form-control text-center" name="secret" placeholder="What's your secret?">
+        <input type="text" class="form-control text-center" name="newbaby" placeholder="What's your baby's name?">
       </div>
       <button type="submit" class="btn btn-dark">Submit</button>
     </form>
